# FileDispatch

./: .gitignore  IMPROVEMENTS.md  LICENSE  README.md  code_review_20260122.md  code_review_20260125.md  eslint.config.cjs  implementation_plan_ocr.md  lazy-zooming-floyd.md  ocr-manifest.json  package-lock.json  package.json  plan.md  production_ready_ocr_imp_plan.md  tailwind.config.ts  tsconfig.json  vite.config.ts
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  GOOD_FIRST_ISSUES.md  MILESTONES.md  OCR_SEARCHABLE_PDF_PLAN.md  PDF_SIGNING_AUTOMATION_PLAN.md  PRD.md  PROJECT_REVIEW_2025.md  README.md  ROADMAP.md  SCRIPT_EXAMPLES.md  STACK.md  ui.js
flatpak/: README.md  build.sh  com.filedispatch.FileDispatch.metainfo.xml  com.filedispatch.FileDispatch.yml  file-dispatch.desktop
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: ocr_bbox_probe.rs  pdfium_rotate_probe.rs
src-tauri/resources/fonts/: README.txt
src-tauri/resources/pdfium/: README.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: engine.rs  folders.rs  logs.rs  mod.rs  ocr.rs  presets.rs  preview.rs  rules.rs  run.rs  settings.rs  undo.rs
src-tauri/src/core/: content.rs  duplicates.rs  engine.rs  executor.rs  incomplete.rs  mod.rs  model_manager.rs  ocr.rs  ocr_geometry.rs  ocr_grouping.rs  patterns.rs  pdf_coords.rs  pdf_font.rs  pdf_page_geometry.rs  state.rs  watcher.rs
src-tauri/src/models/: action.rs  condition.rs  engine.rs  folder.rs  log_entry.rs  mod.rs  ocr_job.rs  preset.rs  preview.rs  rule.rs  settings.rs  undo.rs
src-tauri/src/storage/: database.rs  folder_repo.rs  log_repo.rs  match_repo.rs  mod.rs  rule_repo.rs  tests.rs  undo_repo.rs
src-tauri/src/storage/migrations/: 001_initial.sql  002_undo.sql  003_folder_settings.sql  004_folder_duplicates.sql  005_incomplete_downloads.sql  006_folder_groups.sql
src-tauri/src/utils/: archive.rs  file_info.rs  mod.rs  platform.rs
src/components/folders/: AddFolderDialog.tsx  AddGroupDialog.tsx  FolderItem.tsx  FolderList.tsx  FolderOptionsDialog.tsx
src/components/logs/: ActivityLog.tsx
src/components/presets/: PresetImportDialog.tsx
src/components/rules/: ActionBuilder.tsx  (+4 more)
src/data/: templates.ts
src/hooks/: useEngineStatus.ts  useFocusTrap.ts  useFolders.ts  useLogs.ts  useRules.ts  useSettings.ts  useUserTemplates.ts
src/lib/: conditionLabels.ts  ruleTransfer.test.ts  ruleTransfer.ts  shortcuts.test.ts  shortcuts.ts  tauri.ts  userTemplates.ts
src/stores/: editorStore.ts  engineStore.ts  folderStore.test.ts  folderStore.ts  logStore.ts  ruleStore.test.ts  ruleStore.ts  settingsStore.test.ts  settingsStore.ts  themeStore.ts  toastStore.ts
src/types/: action.ts  condition.ts  engine.ts  folder.ts  index.ts  log.ts  preset.ts  preview.ts  rule.ts  undo.ts
wiki/: Home.md  actions.md  conditions.md  examples.md  getting-started.md  patterns.md  settings.md  templates.md
(+26 files in other folders)
