[package]
name = "file-dispatch"
version = "0.1.0"
description = "Automated file organization for Linux and Windows"
authors = ["File Dispatch Contributors"]
edition = "2021"

[lib]
name = "file_dispatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

anyhow = "1"
ab_glyph = "0.2"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
directories = "5"
filetime = "0.2"
fs_extra = "1"
glob = "0.3"
infer = "0.16"
libc = "0.2"
notify = "6"
oar-ocr = { version = "0.5.2", features = ["download-binaries"] }
pdfium-render = "0.8.37"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
regex = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
trash = "3"
zip = "2"
tar = "0.4"
flate2 = "1"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
quick-xml = "0.39"
lopdf = "0.39"
image = "0.25"
imageproc = "0.25"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false

[dev-dependencies]
tempfile = "3"
